# skeg-py

./: .gitignore  README.md  SECURITY.md  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml  test-trigger.yml
rust/: Cargo.toml
rust/src/: lib.rs
src/skeg/: __init__.py  _wire.py  binary.py  errors.py  resp.py
tests/: conftest.py  test_admin.py  test_binary_edge.py  test_binary_kv.py  test_binary_vector.py  test_native_backend.py  test_resp.py  test_resp_edge.py  test_wire.py
