[package]
name = "skeg-py-native"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

# Stay out of the main workspace: maturin builds this crate as a Python
# extension with its own profile + lib type and shouldn't be a workspace
# member of the Rust server.
[workspace]


[lib]
# Built as a `cdylib` so maturin can pack it as a Python extension.
# `extension-module` feature suppresses the libpython link, which is
# the standard pattern for distributing wheels. The cdylib name must
# match the `#[pymodule] fn _native(...)` symbol in lib.rs; maturin
# renames the output to `skeg/_native.so` per the pyproject mapping.
name = "_native"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# Pinned to published versions on crates.io. maturin builds this crate
# standalone (no parent workspace); bump these in lockstep with the
# engine release.
skeg-client = "0.1.0"
skeg-proto = "0.1.1"
skeg-vector = "0.1.1"
tokio = { version = "1", features = ["full"] }
bytes = "1"
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py310"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
